<resources>
    <string name="app_name">MarmitApp</string>
    <string name="action_settings" />
    <string name="cadastre_se_aqui">Cadastre-se Aqui</string>
    <string name="faça_seu_pedido_aqui">Faça seu Pedido Aqui</string>
    <string name="marmitex">Marmitex</string>
    <string name="mamitex_pequena">Mamitex Pequena</string>
    <string name="mamitex_media">Mamitex Média</string>
    <string name="mamitex_grande">Mamitex Grande</string>
    <string name="suco_de_abacaxi">Suco de Abacaxi</string>
    <string name="suco_de_laranja">Suco de Laranja</string>
    <string name="refrigerantes">Refrigerantes</string>
    <string name="sucos">Sucos</string>
    <string name="coca_cola">Coca Cola</string>
    <string name="guarana">Guaraná Antarctica</string>
    <string name="valor_total">VALOR TOTAL: 0,00 R$.</string>
    <string name="confirmar">Confirmar</string>
    <string name="endereço">Endereço</string>
    <string name="entrega_a_domicilio">Entrega a Domicílio</string>
    <string name="retirar_no_local">Retirar no Local</string>
    <string name="pagamento">Pagamento</string>
    <string name="cartão">Cartão</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="valor_a_apagar">VALOR A PAGAR: 0,00 R$.</string>
    <string name="finalizar">Finalizar</string>
    <string name="pedido_finalizado">Pedido Finalizado</string>
    <string name="numero_do_pedido">Número do Pedido:</string>
    <string name="nome">NOME:</string>
    <string name="data">DATA:</string>
    <string name="hora">HORA:</string>
    <string name="valor_final_">VALOR TOTAL: 0,00 R$.</string>
    <string name="voltar_ao_inicio">Voltar ao Inicio</string>
    <string name="entrar">Entrar</string>
    <string name="cardapio_da_semana">Cardápio da Semana</string>
    <string name="fazer_pedido">Fazer Pedido</string>
    <string name="meus_pedido">Meus Pedidos</string>
    <string name="cadastro">Cadastro</string>
    <string name="salvar">Salvar</string>
    <string name="login">Login</string>
    <string name="nome_">NOME</string>
    <string name="senha">SENHA</string>
    <string name="email">EMAIL</string>
    <string name="preço_p">Preço: 8,00 R$.</string>
    <string name="preço_m">Preço: 9,00 R$.</string>
    <string name="preço_g">Preço: 10,00 R$.</string>
    <string name="preço_suco">Sucos 4,00 R$.</string>
    <string name="preço_refrigerante">Refrigerantes 6,00 R$.</string>
    <string name="numero">NÚMERO</string>
    <string name="rua_avenida">RUA/AVENIDA</string>
    <string name="bairro">BAIRRO</string>
    <string name="sair">Sair</string>
    <string name="confirmar_senha">CONFIRMAR SENHA</string>
    <string name="descrição_marmitex">Descrição Marmitex:</string>

</resources>
