<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout"
        tools:context=".FinalizarActivity">

        <TextView
            android:id="@+id/txtPedidoNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_do_pedido"
            android:textAlignment="center"
            android:textColor="#C00000"
            android:textStyle="normal|bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtFinalizarNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTotalFim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_final_"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_red_dark"
            android:onClick="abrirInicio"
            android:text="@string/voltar_ao_inicio"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

    </LinearLayout>
</ScrollView>
