<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout"
        tools:context=".AddressPaymentActivity">

        <TextView
            android:id="@+id/txtEndereço"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endereço"
            android:textAlignment="center"
            android:textColor="#C00000"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/ckbEntrega"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/entrega_a_domicilio" />
            <CheckBox
                android:id="@+id/ckbRetirarLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retirar_no_local" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#000">
                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/nome_"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#000">
                <EditText
                    android:id="@+id/edtRua"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/rua_avenida"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#000">
                <EditText
                    android:id="@+id/edtNumero"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#000">
                <EditText
                    android:id="@+id/edtBairro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/bairro"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtPagamento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pagamento"
            android:textAlignment="center"
            android:textColor="#C00000"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/ckbCartao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cartão" />
            <CheckBox
                android:id="@+id/ckbDinheiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinheiro" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtTotalResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_a_apagar"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:onClick="abrirFinalizar"
            android:text="@string/finalizar"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

    </LinearLayout>
</ScrollView>