<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <android.support.design.widget.TextInputLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textColorHint="#000">
    <EditText
        android:id="@+id/edtNomeCadastro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/nome_"
        android:inputType="text"
        />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <android.support.design.widget.TextInputLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textColorHint="#000">
        <EditText
            android:id="@+id/edtEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:textColorHint="#000">
            <EditText
                android:id="@+id/edtSenhaCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/senha" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:textColorHint="#000" >
            <EditText
                android:id="@+id/edtConfirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirmar_senha"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_layout">
        <Button
            android:id="@+id/btnSalvarCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:textColor="@color/colorWhite"
            android:text="@string/salvar"
            android:textSize="15sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

</LinearLayout>
</ScrollView>